--- a/style.css
+++ b/style.css
@@ -48,7 +48,9 @@ body {
   display: flex;
   flex-direction: row;
   margin-top: 15px;
-  margin-left: 20px;
+  margin: 15px auto;
+  padding: 10px;
+  width: 95%;
 }
 
 /* Sidebar Menu */
@@ -309,4 +311,46 @@ body {
 
 ::-webkit-scrollbar-track {
   background: #f8f8f7;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column; /* Stack sidebar on top */
+    margin-left: 0;
+  }
+
+  .sidebar {
+    width: 100%;
+    padding: 10px;
+  }
+  .header {
+    flex-direction: column;
+    height: auto;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+
+  .logo {
+    height: 40px;
+  }
+   img {
+    max-width: 100%;
+    height: auto;
+   }
+  
+}
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-size: 16px;
+  line-height: 1.6;
 }
